Prevents blog post images from being too wide.

--- a/app/assets/stylesheets/blog_posts.scss
+++ b/app/assets/stylesheets/blog_posts.scss
@@ -12,6 +12,11 @@
   margin-bottom: 35px;
 }
 
+.blog_post_container img {
+  max-width: 100%;
+  height: auto;
+}
+
 .blog_post_title {
   font-weight: bold;
   margin-bottom: 10px;
